--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -7,12 +7,8 @@
 @import 'global'
 @import 'debug'
 
-t-presets()
+t-presets(major-sixth)
+t-headers(helvetica)
 
 #content
   margin: 0
-  h1
-    width: 500px
-    color: red
-    +below('m')
-      width: 200px
