add data folder, change pathes for svgmin imagemin add commands in readme

--- a/src/css/global.styl
+++ b/src/css/global.styl
@@ -2,9 +2,23 @@
   box-sizing border-box
   position: relative
 
+alertc = #FC6E51
+textc = white
+
 html
   #browse-happy
     display none
+    padding: 20px
+    background-color: alertc
+    color: textc
+    fixed left top
+    width: 100%
+    z-index: 9999
+    >p
+      font-size: 14px
+      line-height 15px
+      margin: 0
+      padding: 0
   &.no-svg
   &.no-canvas
     #browse-happy
