fix debug panel Ctrl+i

--- a/src/templates/layout.jade
+++ b/src/templates/layout.jade
@@ -8,7 +8,7 @@ html(lang="en")
     head
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible' content='IE=edge')
-        title=site_name
+        title=site_names
 
         meta(name='description' content='3ginger portfolio and blog')
         meta(name='author' content=site_developer)
