--- a/src/css/debug.styl
+++ b/src/css/debug.styl
@@ -1,10 +1,17 @@
-d-panel-color = rgba(black, .5)
+d-panel-color = rgba(black, .8)
+d-text-color = white
 
 #debug-panel
   display none
-  position fixed
-  width: 100%
-  height: 100%
+  fixed left top
+  size 100%
   background-color: d-panel-color
+  color d-text-color
+  z-index: 999999
+  overflow hidden
+  overflow-y auto
+  pre
+    margin: 0
+    padding: 0
   &.active
     display block
